<resources>
    <string name="app_name">Activities</string>
    <string name="action_settings">Settings</string>
    <string name="oncreate_txt">onCreate() calls:</string>
    <string name="onstart_txt">onStart() calls:</string>
    <string name="onstop_txt">onSTop() calls:</string>
    <string name="onpause_txt">onPause() calls:</string>
    <string name="onresume_txt">onResume() calls:</string>
    <string name="onrestart_txt">onRestart() calls:</string>
    <string name="ondestroy_txt">onDestroy() calls:</string>
    <string name="next_act">Start activity 2</string>
    <string name="title_activity_activity_two">ActivityTwo</string>
    <string name="stop_act">Stop activity two</string>
</resources>
