<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_activity_two"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView android:text="@string/oncreate_txt" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/onCreate_count2" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView android:text="@string/onstart_txt" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/onStart_count2" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView android:text="@string/onstop_txt" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/onStop_count2" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView android:text="@string/onpause_txt" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/onPause_count2" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView android:text="@string/onresume_txt" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/onResume_count2" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView android:text="@string/onrestart_txt" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/onRestart_count2" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView android:text="@string/ondestroy_txt" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/onDestroy_count2" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_act"
        android:onClick="stopAct"/>

</LinearLayout>
